# structs-benchmarks

./: .gitignore  CMakeLists.txt  README.md  trabfinal.md
logs/: logs.txt  lse_benchmark.txt
logs/abp_benchmarks/consult/: random.txt
logs/abp_benchmarks/insert/: random.txt
logs/lsec_benchmarks/consult/: random.txt
logs/lsec_benchmarks/insert/: random.txt
plots/: consults.py  plots.py  scatter.py
src/: main.c
src/data_gen/: db.c  db.h
src/models/ABP/: abp.c  abp.h
src/models/LSE/: lse.c  lse.h
